<resources>
    <string name="app_name">CurrencyCalculatorApp</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">History</string>
    <string name="please_choose_the_date">Please, choose the date</string>
    <string name="date">Date</string>
    <string name="original_currency">Original Currency</string>
    <string name="currency">Currency</string>
    <string name="target_currency">Target Currency</string>
    <string name="amount">Amount</string>
    <string name="you_will_receive">You will receive</string>
    <string name="exchange">Exchange</string>
    <string name="select_date">Select date</string>
    <string name="no_history_yet">No History Yet</string>
</resources>