<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:title="Currency Calculator"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/exchangeTv"
        app:layout_constraintTop_toBottomOf="@id/topToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@drawable/info_content_container"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dateTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/date"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dateValueTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:drawableEnd="@drawable/ic_arrow_history"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/all_period"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/dateTitleTv"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@drawable/info_content_container"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/originCurrencyTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/original_currency"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/originalCurrencyValueTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:drawableEnd="@drawable/ic_arrow_history"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/currency"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/originCurrencyTitleTv"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@drawable/info_content_container"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/targetCurrencyTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/target_currency"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/targetCurrencyValueTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:drawableEnd="@drawable/ic_arrow_history"
                    android:drawablePadding="@dimen/padding_8"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/currency"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/targetCurrencyTitleTv"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currency_value_tc_til"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@drawable/input_field_container"
                android:hint="@string/amount"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintTextColor="@color/secondary_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currency_input_filed_tc_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_regular"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black_white"
                    android:textSize="@dimen/sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/you_will_receive"
                android:textColor="@color/black_white"
                android:textSize="@dimen/sp_18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/exchangeAmountTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/black_white"
                android:textSize="@dimen/sp_22" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exchangeTv"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/enable_disable_button_selector"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/exchange"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>